# glow

./: .gitignore  README.md
1.julia/: CMakeLists.txt  julia.frag  main.cpp
2.shade/: CMakeLists.txt  changes  main.cpp  shade.vert  shapes.hpp
3.trackball/: CMakeLists.txt  changes  main.cpp  shade.frag
4.model/: CMakeLists.txt  changes  main.cpp  shade.frag
5.curves/: CMakeLists.txt  main.cpp  plot.frag  plot.hpp  plot.vert
common/: obj.hpp  shader.hpp  shapes.hpp  trackball.hpp
